fix the gap issue & made responsive

--- a/convention center/styles/style.css
+++ b/convention center/styles/style.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 body {
     font-family: "Poppins", sans-serif;
 }
 
+.card-price {
+    font-family: 'Roboto', sans-serif;
+}
+
+.faq-custom{
+    font-family: 'Inter', sans-serif;
+}
+
 img {
     max-width: 100%;
-    height: auto;
 }
 
 ul {
@@ -14,15 +23,13 @@ ul {
     padding: 0;
 }
 
-.card-price {
-    font-family: 'Roboto', sans-serif;
-}
 
 .pricing-card {
     border: none;
     border-radius: 20px;
     transition: transform 0.3s;
     padding: 2rem 1rem;
+    width: 100%;
 }
 
 .btn-outline-primary-custom {
@@ -79,10 +86,16 @@ ul {
     color: #ffffff;
 }
 
+
+
 @media (max-width: 570px){
     .alert-custom {
-        top: -4%;
+        top: -5%;
         left: 55%;
         transform: translateX(-50%);
+    }
+
+    .pricing-card:hover {
+        transform: translateY(0);
     }
 }
